<resources>
    <string name="app_name">Just Clean Test</string>

    <!--Common-->
    <string name="OK">OK</string>
    <string name="please_make_sure_internet_is_working">Please make sure your internet is working.</string>
    <string name="connection_time_out">Connection time-out, please retry again.</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="alert">Alert</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="success">Success</string>
    <string name="please_wait">Please wait…</string>
    <string name="security_patches_has_been_updated">You need to update app, Security patches has been updated</string>
    <string name="ssl_handshake_exception">SSL HandShake exception.Please try again after some times</string>

    <!--side nav bar-->
    <string name="login_or_registration">Login or Registration</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--Movies Listing-->
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="movies_image">Movies Image</string>
    <string name="no_movies_found">No Movies found.</string>
    <string name="buy_now">Buy Now</string>
    <string name="release_date">Release date:</string>
    <string name="film">Film</string>

    <!-- Movies Detail -->
    <string name="play_icon">Play Icon</string>
    <string name="_10">10$</string>
    <string name="cast">Cast</string>
    <string name="plot_explanation">Plot Explanation</string>

    <!--Search -->
    <string name="search">Search</string>
    <string name="popularity">Popularity:</string>
    <string name="isadult">IsAdult:</string>
    <string name="vote_count">Vote Count:</string>
    <string name="vote_average">Vote Average:</string>


</resources>
