<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.q8coders.justClean.screen.moviesDetail.MoviesDetailFragment"
    tools:showIn="@layout/movies_detail_fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/topHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp">

            <ImageView
                android:id="@+id/posterImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movies_image"
                android:background="@drawable/gradient_button"
                android:elevation="@dimen/_10sdp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"
                tools:targetApi="lollipop" />

            <ImageView
                android:id="@+id/playIcon"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerInParent="true"
                android:src="@android:drawable/ic_media_play"
                android:visibility="gone"
                android:contentDescription="@string/play_icon" />

        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/_10sdp"
            android:layout_below="@+id/topHeader"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardCornerRadius="@dimen/_5sdp">

            <ImageView
                android:id="@+id/propertyImage"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_110sdp"
                android:src="@drawable/gradient_button"
                android:contentDescription="@string/movies_image" />


        </android.support.v7.widget.CardView>


        <com.q8coders.justClean.utility.MyTextView
            android:id="@+id/moviesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_toEndOf="@+id/cardView"
            android:layout_below="@+id/topHeader"
            style="@style/mTextStyle_black_header" />


        <com.q8coders.justClean.utility.MyTextView
            android:id="@+id/moviesReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/moviesTitle"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:text=""
            android:layout_toEndOf="@+id/cardView"
            style="@style/mTextStyle_grey_body"/>

        <com.q8coders.justClean.utility.MyTextView
            android:id="@+id/moviesDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/moviesReleaseDate"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:text=""
            android:layout_toEndOf="@+id/cardView"
            style="@style/mTextStyle_grey_body"/>

        <Button
            android:layout_width="@dimen/_70ssp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/_10"
            android:background="@drawable/bg_round"
            android:layout_below="@+id/moviesDuration"
            android:layout_toEndOf="@+id/cardView"
            android:layout_marginStart="@dimen/_30sdp"
            style="@style/mButtonStyle"/>

        <com.q8coders.justClean.utility.MyTextView
            android:id="@+id/castLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cast"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_below="@+id/cardView"
            style="@style/mTextStyle_black_header" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/castRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_below="@+id/castLabel"/>

        <com.q8coders.justClean.utility.MyTextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plot_explanation"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_below="@+id/castRecyclerView"
            style="@style/mTextStyle_black_header" />

        <com.q8coders.justClean.utility.MyTextView
            android:id="@+id/moviesDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:text=""
            android:paddingBottom="@dimen/_30sdp"
            style="@style/mTextStyle_grey_body"/>


    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>